Fix footer jumping

--- a/src/components/Spinner.module.css
+++ b/src/components/Spinner.module.css
@@ -1,3 +1,10 @@
+.wrapper {
+  height: 353px; /* approximate chart height */
+  position: relative;
+  margin-top: 8px;
+  padding-bottom: var(--baseline);
+}
+
 .spinner {
   display: block;
   animation: rotate 2s linear infinite;
